have drag and drop working to go out of overflow, but need it to format correctly and save

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,3 +36,7 @@ footer {
 .albumview {
 	border: 2px dotted black;
 }
+
+.ui-draggable-dragging {
+	position: absolute !important;
+}
